WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49579
REGRESSION (
r72040
): Error image with alt text can cause style to be frozen in a subtree
https://bugs.webkit.org/show_bug.cgi?id=49579
Summary
REGRESSION (r72040): Error image with alt text can cause style to be frozen i...
mitz
Reported
2010-11-15 23:09:13 PST
Created
attachment 73964
[details]
Test case See attached test case. The problem is that RenderImage::imageChanged() is called during attach() when an ancestor is attaching during recalcStyle(), and imageChanged() calls setNeedsStyleRecalc(). After recalcStyle() calls attach, it clears the childNeedsStyleRecalc state for itself, but not for all of its descendants leading down to the image. Now there is an island out of which setNeedsStyleRecalc() cannot propagate to the root.
Attachments
Test case
(657 bytes, text/html)
2010-11-15 23:09 PST
,
mitz
no flags
Details
Only defer intrinsic size compoutation if a style recalc is coming
(8.45 KB, patch)
2010-11-16 13:11 PST
,
mitz
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-11-15 23:11:47 PST
<
rdar://problem/8672000
>
mitz
Comment 2
2010-11-15 23:17:38 PST
This bug was causing fast/block/float/015.html to fail intermittently, so I disabled it in <
http://trac.webkit.org/projects/webkit/changeset/72064
>.
mitz
Comment 3
2010-11-16 13:11:10 PST
Created
attachment 74030
[details]
Only defer intrinsic size compoutation if a style recalc is coming
Simon Fraser (smfr)
Comment 4
2010-11-16 13:49:55 PST
Comment on
attachment 74030
[details]
Only defer intrinsic size compoutation if a style recalc is coming View in context:
https://bugs.webkit.org/attachment.cgi?id=74030&action=review
> WebCore/ChangeLog:8 > +
https://bugs.webkit.org/show_bug.cgi?id=49579
> + > + Tests: fast/block/float/015.html
I'd like to see some words here about what the problem was. I don't think the but title is quite enough.
mitz
Comment 5
2010-11-16 14:09:09 PST
Fixed in <
http://trac.webkit.org/changeset/72135
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug