<rdar://problem/8672000> REGRESSION (r72040): Error image with alt text can cause style to be frozen in a subtree https://bugs.webkit.org/show_bug.cgi?id=49579

Reviewed by Simon Fraser.

WebCore:

r72040 introduced a call to setNeedsStyleRecalc() from RenderImage::imageChanged(). When imageChanged()
got called beneath recalcStyle() on some ancestor element, the result was that the ancestor’s
childNeedsStyleRecalc flag got cleared, but its descendants all the way down to the image did not.
Thereafter, setNeedsStyleRecalc() would fail to propagate from that subtree up to the root. The fix
is to avoid the newly-added setNeedsStyleRecalc() in most cases, including during reclacStyle(), and
just keep it for when it is needed.

Tests: fast/block/float/015.html
       fast/images/style-access-during-imageChanged-style-freeze.html

* dom/Document.cpp:
(WebCore::Document::isPendingStyleRecalc): Added.
* dom/Document.h:
* rendering/RenderImage.cpp:
(WebCore::RenderImage::imageChanged): Only defer intrinsic size compoutation if a style recalc
is coming (indicating that current style() is stale).

LayoutTests:

* fast/block/float/015.html: Copied from LayoutTests/fast/block/float/015.html-disabled.
* fast/block/float/015.html-disabled: Removed.
* fast/images/style-access-during-imageChanged-style-freeze-expected.txt: Added.
* fast/images/style-access-during-imageChanged-style-freeze.html: Added.



Canonical link: https://commits.webkit.org/62603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72135 268f45cc-cd09-0410-ab3c-d52691b4dbfc